--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "Splits markdown files at level 1 headings"
 authors = ["Markus Straub"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.9"
 
 [tool.poetry.dev-dependencies]
 black = "*"
 flake8 = ">=4"
-pytest = "^6"
-ipykernel = "^6.6.0"
+pytest = ">=7"
+ipykernel = ">=6.6"
 
 [tool.pytest.ini_options]
 addopts = ["-ra", "-W error"]
