--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,14 @@ black = "*"
 flake8 = ">=4"
 pytest = ">=7"
 ipykernel = ">=6.6"
+pytest-console-scripts = "^1.3.1"
 
 [tool.pytest.ini_options]
 addopts = ["-ra", "-W error"]
 
 [tool.black]
 line-length = 100
-target-version = ['py39']
+target-version = ['py310']
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
