test (and fix) splitting by h3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "python.formatting.provider": "black",
     "python.testing.pytestArgs": [
         ".",
-        "-s",
-        "-vv"
-    ]
+	"-s",
+	"-vv"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
