--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdsplit"
-version = "0.3-SNAPSHOT"
+version = "0.3a"
 description = "Split markdown files at headings"
 readme = "README.md"
 authors = ["Markus Straub"]
@@ -11,14 +11,15 @@ repository = "https://github.com/markusstraub/mdsplit"
 mdsplit = "mdsplit:run"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = ">=3.7"
 
 [tool.poetry.dev-dependencies]
-black = "*"
-flake8 = ">=4"
 pytest = ">=7"
-ipykernel = ">=6.6"
-pytest-console-scripts = ">=1.3.1"
+pytest-console-scripts = ">=1.3"
+tox = ">=^3.25"
+black = "*"
+flake8 = "*"
+ipykernel = "*"
 
 [tool.pytest.ini_options]
 addopts = ["-ra", "-W error"]
