--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdsplit"
-version = "0.3.2"
+version = "0.3.3"
 description = "Split markdown files at headings"
 readme = "README.md"
 authors = ["Markus Straub"]
@@ -11,12 +11,12 @@ repository = "https://github.com/markusstraub/mdsplit"
 mdsplit = "mdsplit:main"
 
 [tool.poetry.dependencies]
-python = ">=3.7"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
-pytest = ">=7"
-pytest-console-scripts = ">=1.3"
-tox = ">=^3.25"
+pytest = "^7"
+pytest-console-scripts = "^1.3"
+tox = "^3.25"
 black = "*"
 flake8 = "*"
 ipykernel = "*"
@@ -30,5 +30,5 @@ line-length = 100
 target-version = ['py310']
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
