--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 skipsdist = true
 #isolated_build = true
-envlist = py37, py38, py39, py310
+envlist = py37, py38, py39, py310, py311
 
 [testenv]
-whitelist_externals = poetry
+allowlist_externals = poetry
 commands =
     poetry install -v
     poetry run pytest
