update target envs, build env, pytest

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist = true
 #isolated_build = true
-envlist = py37, py38, py39, py310, py311
+envlist = py39, py310, py311, py312
 
 [testenv]
 allowlist_externals = poetry
